# android-ndk

audio-echo/app/: build.gradle
audio-echo/app/src/main/cpp/: CMakeLists.txt
